--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
     <div class="mt-8 text-center text-xs opacity-50" style="color: #e8d5b7;">
      💡 เคล็ดลับ: ตีความเข้าข้างตัวเองได้เลย ไม่มีผิด!
     </div>
+    <div class="mt-8 text-center text-xs opacity-50" style="color: #e8d5b7;">
+      จัดทำโดย: นายรัชพล สูขโต ระดับชั้น สทส.1/2 แผนก เทคโนโลยีสารสนเทศ วิทยาลัย อาชีวศึกษาร้อยเอ็ด
+    </div>
    </div>
   </div>
   <script>
